--- a/css/general.css
+++ b/css/general.css
@@ -23,7 +23,9 @@ Paragraph default:1.6
 --- 02 COLORS
 
 Primacy:#e67e22;
--Tints: #fdf2e9;
+-Tints: 
+#fdf2e9;
+#fae5d3;
 -Shades:#cf711f;
 -Accents:
 -Greys:#555;
@@ -69,7 +71,8 @@ body {
 }
 .grid {
   display: grid;
-  gap: 9.6rem;
+  column-gap: 6.4rem;
+  row-gap: 9.6rem;
 }
 .grid--2-cols {
   grid-template-columns: repeat(2, 1fr);
@@ -80,7 +83,9 @@ body {
 .grid--4-cols {
   grid-template-columns: repeat(4, 1fr);
 }
-
+.grid--center-v {
+  align-items: center;
+}
 .heading-primary,
 .heading-secondary,
 .heading-tertiary {
@@ -101,7 +106,9 @@ body {
 }
 
 .heading-tertiary {
-  font-size: 3.6rem;
+  font-size: 3rem;
+  line-height: 1.2;
+  margin-bottom: 3.2rem;
 }
 .subheading {
   display: block;
