--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,34 @@
   font-weight: 700;
 }
 /* *************** */
+/* FEATURED-IN */
+/* *************** */
+
+.section-featured {
+  padding: 4.8rem 0 3.2rem;
+}
+
+.heading-featured-in {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 0.75px;
+  text-align: center;
+  margin-bottom: 2.4rem;
+  color: #888;
+}
+
+.logos {
+  display: flex;
+  justify-content: space-around;
+}
+.logos img {
+  height: 3.2rem;
+  filter: brightness(0);
+  opacity: 50%;
+}
+
+/* *************** */
 /* HOW IT WORKS SECTION */
 /* *************** */
 .section-how {
