--- a/css/style.css
+++ b/css/style.css
@@ -182,3 +182,10 @@
   background-color: #fae5d3;
   z-index: -1;
 }
+
+/* *************** */
+/* MEALS SECTION */
+/* *************** */
+.section-meals {
+  padding: 9.6rem 0;
+}
