--- a/css/style.css
+++ b/css/style.css
@@ -447,7 +447,7 @@ strong {
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
   border-radius: 11px;
   background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
-  height: 50rem;
+
   overflow: hidden;
 }
 
@@ -492,14 +492,26 @@ strong {
   font-weight: 500;
   margin-bottom: 1.2rem;
 }
-.cta-form input {
+.cta-form input,
+.cta-form select {
   width: 100%;
   padding: 1.2rem;
   font-style: 1.8rem;
   font-family: inherit;
+  color: inherit;
   border: none;
+  background-color: #fdf2e9;
+  border-radius: 9px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
-.cta-form select {
+
+.cta-form input::placeholder {
+  color: #aaa;
 }
-.cta-form button {
+
+.cta *:focus {
+  outline: none;
+  /* outline: 4px dotted #e67e22;
+  outline-offset: 8px; */
+  box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
 }
