--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
   align-items: center;
   height: 9.6rem;
   padding: 0 48px;
+  position: relative;
 }
 .logo {
   height: 2.2rem;
@@ -44,6 +45,24 @@
 .main-nav-link.nav-cta:hover,
 .main-nav-link.nav-cta:active {
   background-color: #cf711f;
+}
+
+/* MOBILE */
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
 }
 
 /* *************** */
