--- a/css/general.css
+++ b/css/general.css
@@ -52,6 +52,8 @@ Medium: 11px
 html {
   font-size: 62.5%;
   overflow-x: hidden;
+  /* Does NOT work on Safari and Edge */
+  /* scroll-behavior: smooth; */
 }
 body {
   font-family: "Rubik", sans-serif;
