--- a/css/queries.css
+++ b/css/queries.css
@@ -110,11 +110,13 @@
 @media (max-width: 75em) {
   .btn-mobile-nav {
     display: block;
-    z-index: 1000;
+    z-index: 9999;
   }
 
   .main-nav {
-    background-color: rgba(255, 255, 255, 0.97);
+    background-color: rgba(255, 255, 255, 0.8);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter:blur(10px);
     position: absolute;
     top: 0;
     left: 0;
@@ -124,7 +126,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: all 1s ease-in-out;
+    transition: all 0.5s ease-in;
     /* Hide navigation */
     /* Allows NO transition at all */
     /* display: none; */
